@@ -12,6 +12,9 @@
 # Config variables:
 #
 # $Log$
+# Revision 1.4  2004/10/27 17:53:48  jimmyo
+# Fixed typo in linux/fw_packets (Deb#275537).
+#
 # Revision 1.3  2004/05/20 19:02:37  jimmyo
 # Set categories on a bunch of plugins
 #
@@ -33,7 +36,7 @@
 if ( $ARGV[0] ) {
 
     if ( $ARGV[0] eq 'autoconf' ) {
-	if (-f '/proc/net/smtp') {
+	if (-f '/proc/net/snmp') {
 	    print "yes\n";
 	    exit 0;
 	}
